--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "alpinejs": "^3.12.2",
         "tw-elements": "^1.0.0-beta2"
     }
 }
